set03/problem03_compile_errors.txt
Compilation started at 2/13/2024, 10:07:17 AM
Compilation finished at 2/13/2024, 10:07:17 AM
Compilation started at 2/13/2024, 10:07:46 AM
Compilation finished at 2/13/2024, 10:07:47 AM
Compilation started at 2/13/2024, 10:08:06 AM
Compilation finished at 2/13/2024, 10:08:07 AM
Compilation started at 2/13/2024, 10:08:15 AM
Compilation finished at 2/13/2024, 10:08:15 AM
Compilation started at 2/13/2024, 10:09:24 AM
Compilation finished at 2/13/2024, 10:09:24 AM
Compilation started at 2/13/2024, 10:09:43 AM
Compilation finished at 2/13/2024, 10:09:43 AM
Compilation started at 2/13/2024, 10:09:51 AM
Compilation finished at 2/13/2024, 10:09:51 AM
Compilation started at 2/13/2024, 10:10:42 AM
Compilation finished at 2/13/2024, 10:10:42 AM
Compilation started at 2/13/2024, 10:11:02 AM
Compilation finished at 2/13/2024, 10:11:02 AM
Compilation started at 2/13/2024, 10:12:11 AM
Compilation finished at 2/13/2024, 10:12:11 AM
Compilation started at 2/13/2024, 10:12:58 AM
Compilation finished at 2/13/2024, 10:12:59 AM
Compilation started at 2/13/2024, 10:13:36 AM
Compilation finished at 2/13/2024, 10:13:37 AM
Compilation started at 2/13/2024, 10:14:15 AM
Compilation finished at 2/13/2024, 10:14:15 AM
Compilation started at 2/13/2024, 10:29:44 AM
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set03\problem03.c: In function 'is_prime':
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set03\problem03.c:53:9: error: expected ';' before '}' token
         }
         ^
Compilation finished at 2/13/2024, 10:29:44 AM
Compilation started at 2/13/2024, 10:29:48 AM
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set03\problem03.c: In function 'is_prime':
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set03\problem03.c:53:9: error: expected ';' before '}' token
         }
         ^
Compilation finished at 2/13/2024, 10:29:48 AM
Compilation started at 2/13/2024, 10:29:57 AM
Compilation finished at 2/13/2024, 10:29:57 AM
Compilation started at 2/13/2024, 10:30:33 AM
Compilation finished at 2/13/2024, 10:30:33 AM
Compilation started at 2/13/2024, 11:29:47 AM
Compilation finished at 2/13/2024, 11:29:48 AM
Compilation started at 2/13/2024, 12:04:26 PM
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set03\problem03.c: In function 'is_prime':
c:\Users\Dell\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123\set03\problem03.c:103:1: error: expected ';' before '}' token
 }
 ^
Compilation finished at 2/13/2024, 12:04:28 PM
Compilation started at 2/13/2024, 12:04:44 PM
C:\Users\Dell\AppData\Local\Temp\ccOms85a.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set03/problem03.c:79: undefined reference to `input_number'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/13/2024, 12:04:46 PM
Compilation started at 2/13/2024, 12:05:22 PM
C:\Users\Dell\AppData\Local\Temp\cc85zb0z.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set03/problem03.c:79: undefined reference to `input_number'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/13/2024, 12:05:23 PM
Compilation started at 2/13/2024, 12:11:17 PM
C:\Users\Dell\AppData\Local\Temp\ccHjzlip.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set03/problem03.c:79: undefined reference to `input_number'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/13/2024, 12:11:18 PM
Compilation started at 2/13/2024, 12:11:46 PM
C:\Users\Dell\AppData\Local\Temp\ccajsyYG.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set03/problem03.c:79: undefined reference to `input_number'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/13/2024, 12:11:47 PM
Compilation started at 2/13/2024, 12:12:18 PM
C:\Users\Dell\AppData\Local\Temp\ccYJYHbk.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set03/problem03.c:79: undefined reference to `input_number'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/13/2024, 12:12:19 PM
Compilation started at 2/13/2024, 12:13:15 PM
C:\Users\Dell\AppData\Local\Temp\ccA2uuch.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set03/problem03.c:79: undefined reference to `input_number'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/13/2024, 12:13:15 PM
Compilation started at 2/13/2024, 12:22:22 PM
C:\Users\Dell\AppData\Local\Temp\ccErA18x.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set03/problem03.c:79: undefined reference to `input_number'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/13/2024, 12:22:23 PM
Compilation started at 2/13/2024, 1:38:27 PM
Compilation finished at 2/13/2024, 1:38:27 PM
Compilation started at 2/13/2024, 1:38:54 PM
Compilation finished at 2/13/2024, 1:38:54 PM
Compilation started at 2/13/2024, 1:39:16 PM
Compilation finished at 2/13/2024, 1:39:17 PM
Compilation started at 2/13/2024, 1:40:40 PM
Compilation finished at 2/13/2024, 1:40:40 PM
Compilation started at 2/13/2024, 1:41:25 PM
Compilation finished at 2/13/2024, 1:41:25 PM
Compilation started at 2/13/2024, 1:41:35 PM
Compilation finished at 2/13/2024, 1:41:35 PM
Compilation started at 2/13/2024, 1:43:02 PM
Compilation finished at 2/13/2024, 1:43:02 PM
Compilation started at 2/13/2024, 1:43:33 PM
Compilation finished at 2/13/2024, 1:43:34 PM
Compilation started at 2/13/2024, 1:44:12 PM
Compilation finished at 2/13/2024, 1:44:12 PM
Compilation started at 2/13/2024, 1:46:30 PM
C:\Users\Dell\AppData\Local\Temp\ccSK4Kei.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set03/problem03.c:87: undefined reference to `input_number'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/13/2024, 1:46:31 PM
Compilation started at 2/13/2024, 1:46:57 PM
C:\Users\Dell\AppData\Local\Temp\ccCroLWd.o: In function `main':
c:/Users/Dell/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Raghav-rvu-123/set03/problem03.c:87: undefined reference to `input_number'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 2/13/2024, 1:46:58 PM
Compilation started at 2/13/2024, 1:47:26 PM
Compilation finished at 2/13/2024, 1:47:26 PM
Compilation started at 2/13/2024, 1:47:49 PM
Compilation finished at 2/13/2024, 1:47:49 PM
Compilation started at 2/13/2024, 1:48:04 PM
Compilation finished at 2/13/2024, 1:48:04 PM
Compilation started at 2/13/2024, 1:48:53 PM
Compilation finished at 2/13/2024, 1:48:53 PM
